# PI-detector

./: .gitignore  CMakeLists.txt  NUMERICAL_DERIVATIVES.md  README.md  TENSOR_CORE_ANALYSIS_SUMMARY.md  test_condition_numbers.json  test_output.json
data/: half.json
data/atom/: data_origin.json  example.json  in_sp_full.json  out_sp_full.json
data/fpcc/: data_origin.json
data/hsed/: data_origin.json  in_sp_full.json  out_sp_full.json
docs/: tensor_core_fp16_analysis.md
examples/cuda/: CMakeLists.txt  README.md  tensor_core_fp16_test.cu
matrix/: Makefile  compare.py  generator.c  gsl_solver.c  gsl_solver_i.c  mplapack.cc
module/: CMakeLists.txt
module/include/Core/: Common.hh  RangeSolver.hh  fpInterface.hh  target.h
module/include/Util/: communicator.hh  fpUtil.hh  opcode.hh
module/src/: main.cc
module/src/Core/: .targetExample.cc.swp  CMakeLists.txt  RangeSolver.cc  example.cc  targetExample.cc  val
module/src/Util/: CMakeLists.txt  fpUtil.cc  handler.cc
script/: evaluation.py  get_inputs.py  oracle_mpmath.py  result_reproduction.ipynb  tpfn-detector.py  tpfn-fpcc.py
scripts/: test_tensor_cores.sh
